--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
       "@/assets": [
         "./src/assets/*"
       ],
+      "@/styles": [
+        "./src/styles/*"
+      ],
       "@/*": [
         "./src/*"
       ]
